--- a/package.json
+++ b/package.json
@@ -9,21 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-<<<<<<< HEAD
-=======
     "@headlessui/react": "^2.2.9",
     "@supabase/ssr": "^0.7.0",
->>>>>>> 9cd2c56285d9d590dfa31b3b9564b7362b191ccd
     "@supabase/supabase-js": "^2.80.0",
+    "lucide-react": "^0.555.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-<<<<<<< HEAD
-    "react-icons": "^5.5.0"
-=======
     "react-icons": "^5.5.0",
     "solar-icon-set": "^2.0.1"
->>>>>>> 9cd2c56285d9d590dfa31b3b9564b7362b191ccd
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
