--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.9",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "cors": "^2.8.5",
     "lucide-react": "^0.555.0",
     "next": "15.5.5",
     "react": "19.1.0",
