--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@headlessui/react": "^2.2.9",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "chart.js": "^4.5.1",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.555.0",
     "next": "^15.5.9",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
