--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-youtube": "^10.1.0",
     "recharts": "^3.6.0",
     "solar-icon-set": "^2.0.1"
   },
